<resources>
    <string name="app_name">Sudoku</string>
    <string name="demarrer">Jouer</string>
    <string name="quitter">Quitter</string>
    <string name="tresFacile">Très Facile</string>
    <string name="facile">Facile</string>
    <string name="moyen">Moyen</string>
    <string name="difficile">Difficile</string>
    <string name="tresDifficile">Très Difficile</string>
    <string name="etoile">etoile</string>
    <string name="retour">Retour</string>
    <string name="testAlgo">Test Algo</string>
    <string name="mode1">Classique</string>
    <string name="mode2">Graphique</string>
    <string name="CNNcapture">OK</string>
    <string name="classic_tag">1</string>
    <string name="graphic_tag">2</string>
</resources>
