<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miage.master.myapplication.Niveau">

    <Button
        android:id="@+id/buttonTresFacile"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/tresFacile"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="66dp" />

    <Button
        android:id="@+id/buttonFacile"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/facile"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="134dp" />

    <Button
        android:id="@+id/buttonMoyen"

        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/moyen"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="198dp" />

    <Button
        android:id="@+id/buttonDifficile"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/difficile"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="272dp"
        />

    <Button
        android:id="@+id/buttonTresDifficile"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/tresDifficile"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="340dp" />

</android.support.constraint.ConstraintLayout>
